# Double-Ended-Catenable-Deque

./: .lia.cache  DECD.opam  README.md  _CoqProject  dune-project
Article/: plan.md
Article/BinCounting/: core.ml  (+2 more)
BinCounting/: AWcode.ml  core.ml  core.v
Cdeque/: AWcode.ml  buffer.v  core.ml  core.v  core_stored.ml  dune  operations.v  types.v  types_base.v
Color/: color.ml  color.v
Deq/: AGproof'.v  AGproof.v  README.md  deque.v
Deque/: AGproof.v  AWcode.ml  README.md  buffer.v  core.ml  core.v  deque.v  deque1.v  deque_no_hole.v  dune  models.v  ncdeque.v  operations.v  save_deque.v  types.v
Dequeue/: README.md  core.ml  deque.v  dune  lvlproof.v  lvlproof11.v  lvlproof2.v  proof.v  rectP.v
Extraction/: buffer.mli  core.ml  core.mli  models.ml  models.mli  ncdeque.ml  ncdeque.mli  operations.ml  operations.mli  types.mli
Sdeque/: core.ml  core.v  core_base.ml  core_v0_base.v  core_v1_lvl.v  core_v2_size.v  corev00.v  corev1.v  corev2.v  corev3.v  corev3_test2.v  dune
SimpleApproach/: README.md  correct_list_01'.v  correct_number_00.v
Slides/: correct_list_0.v  correct_list_00.v  correct_list_01.v  correct_list_010.v  correct_number.v  correct_number_00.v  correct_number_010.v  correct_number_10'.v  correct_number_v0.v  correct_number_v1.v  explanations.md  explications.md  implementation_number.v  test.ml
Steque/: README.md  cr1.md  dune  lvlproof_Sdpt.v  lvlproof_fuel.v  lvlproof_fun_arg.v  lvlproof_le_dpt.v  lvlproof_relation.v  lvlproof_rewrite_dequeue.v  lvlproof_same_struct.v  proof.v  redefproof.v  steque.v
_build/: .db  .digest-db  log
(+97 files in other folders)
